# ShawnKristeksPortfolio

./: .gitignore  MANIFEST.in  README.md  application.py  config.py  passenger_wsgi.py  requirements.txt  setup.cfg  setup.py
smk/: __init__.py  auth.py  blog.py  forms.py  links.py  myResume.py  reuse.py  schema.sql
smk/static/js/: db.json  main.js  quotes.js
smk/static/style/: quotes.css  style.css
smk/templates/: base.html  footer.html  head.html  index.html  navbar.html  tail.html
smk/templates/auth/: login.html  register.html
smk/templates/blog/: blog.html  create.html  feed.html  post.html  update.html
smk/templates/quotivation/: quotes.html
smk/templates/resume/: about.html  challenge-details.html  challenges.html  contact2.html  facts.html  hero.html  project-details.html  projects.html  resume.html  skills.html
