[metadata]
name = smk
version = 0.1.0
author = Shawn Kristek 
author_email = shawnkristek@gmail.com
description = The personal portolio flask app of Shawn Kristek, Software Engineer. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://shawnkristek.com
project_urls =
    Bug Tracker = https://github.com/shawnkristek/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
